Bug 167506 - Web Presence plugin broken in Kopete 0.50.80
Summary: Web Presence plugin broken in Kopete 0.50.80
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Web Presence Plugin (other bugs)
Version First Reported In: 0.50.80
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-27 02:15 UTC by William Hilton
Modified: 2008-12-27 19:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description William Hilton 2008-07-27 02:15:08 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

The Web Presence plugin for Kopete appears not to work at all. If I open it's configuration dialog, change the settings, and hit OK, none of those settings are saved. When I go to configure it again, it is always reset and doesn't remember the filename, formatting or display name. Using Kopete 0.50.80, Web Presence version 0.8.0 with KDE 4.1.60 (kde-nightly Neon Project package).
Comment 1 Andy Goossens 2008-12-27 19:31:56 UTC
SVN commit 902233 by goossens:

save Web Presence preferences
(a.k.a. completing the port from kautoconfig to KConfigXT)

BUG: 167506


 M  +6 -0      CMakeLists.txt  
 A             webpresenceconfig.kcfg  
 A             webpresenceconfig.kcfgc  
 M  +26 -33    webpresenceplugin.cpp  
 M  +6 -11     webpresenceplugin.h  
 M  +9 -30     webpresencepreferences.cpp  
 M  +1 -10     webpresencepreferences.h  
 M  +32 -89    webpresenceprefs.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902233