save Web Presence preferences (a.k.a. completing the port from kautoconfig to KConfigXT)

BUG: 167506

svn path=/trunk/KDE/kdenetwork/kopete/; revision=902233